--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web API 3916 Homework 2",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --timeout 10000 --exit"
+    "test": "mocha --timeout 10000 --exit",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,12 @@
   },
   "homepage": "https://github.com/shawnmccarthy/CSC3916_HW2#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "http": "0.0.1-security",
+    "express": "^4.17.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
@@ -34,6 +35,9 @@
   "devDependencies": {
     "chai": "^4.3.0",
     "chai-http": "^4.3.0",
-    "mocha": "^8.3.0"
+    "mocha": "^9.2.0"
+  },
+  "directories": {
+    "test": "test"
   }
 }
